# farpatch

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  frogfs_config.json  package-lock.json  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s3.dvt3-nopsu
.github/workflows/: build-and-upload.yml  build-nightly-blackmagic.yml  build-pr.yml
components/blackmagic/: CMakeLists.txt  aux_serial.c  blackmagic.ld  common.c  exception.c  exception.h  gdb_if.h  general.h  gpio-dedic.c  gpio-dedic.h  jtagtap-dedic.c  jtagtap-gpio.c  jtagtap.c  spi.c  swdptap-dedic.c  swdptap-gpio.c  swdptap-spi.c  swdptap-ulp.c  swo-manchester.c  swo-manchester.h  swo-uart.c  swo-uart.h  swo.c  swo.h  traceswo.c  traceswo.h  usb.h
html/: index.html  main.js
html/css/: desktop.css  mobile.css  subset-iconfont.min.css
html/flash/: index.html
html/webfonts/: material-design-icons.eot
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  gdb_if.c  gdb_if.c.threaded  gdb_main.c  gdb_main.c.multi  gdb_main_farpatch.h  http.c  http.h  http_api.c  http_api.h  mdns.c  ota-http.c  ota-http.h  ota-tftp.c  ota-tftp.h  platform.c  rtt_if.c  tinyprintf.h  uart.c  uart.h  websocket.c  websocket.h  wifi.c  wifi.h  wifi_reset_idf4.c  wifi_reset_idf5.c  word_list.c
main/gprof/: gmon.h  profil.h  profiler.S
main/include/: farpatch_adc.h  platform.h  version.h.in
main/wilma/: murmur3.c  utils.c  wilma.c  wilma.h
